# algds2024

./: .gitignore
lab1/: find_max_incresing_subsequence.h  main.c
lab1/test/: CMakeLists.txt  main.cpp  test.cpp
lab2/: CMakeLists.txt  main.c  main.cpp  treap.h
lab2/test/: CMakeLists.txt  main.cpp  test.cpp  treap.h
